--- a/index.html
+++ b/index.html
@@ -14,19 +14,21 @@
         <div>
         <h3 class="h3">CSS Weather Forecast </h3>
     </div>
+    <div>
 <ul class="ul">
     <li class="li">Lisbon<p>21°C</p></li>
-    <li class="li">Paris <p>11°C</p></li>
-    <li class="li">Belgrade <p>15°C</p></li>
-    <li class="li">Venice <p>21°C</p></li>
-    <li class="li">Tel-Avive <p>32°C</p></li>
-    <li class="li">Cair <p>21°C</p></li>
-    <li class="li">New-York <p>17°C</p></li>
-    <li class="li">New-Delhi <p>17°C</p></li>
-    <li class="li">San-Francisco <p>15°C</p></li>
-    <li class="li">Tokyo <p>8°C</p></li>
-    <li class="li">Sydney <p>25°C <i class="wi wi-night-sleet"></i></p></li>
+    <li class="li-2">Paris <p>11°C</p></li>
+    <li class="li-3">Belgrade <p>15°C</p></li>
+    <li class="li-4">Venice <p>21°C</p></li>
+    <li class="li-5">Tel-Avive <p>32°C</p></li>
+    <li class="li-6">Cair <p>21°C</p></li>
+    <li class="li-7">New-York <p>17°C</p></li>
+    <li class="li-8">New-Delhi <p>17°C</p></li>
+    <li class="li-9">San-Francisco <p>15°C</p></li>
+    <li class="li-10">Tokyo <p>8°C</p></li>
+    <li class="li-11">Sydney <p>25°C <i class="wi wi-night-sleet"></i></p></li>
 </ul>
+</div>
 <p class="p">Have a nice day and don't forget umbrella if you are in New Delhi now!</p>
     </main>
 </body>
